# 058-kv-cache-optimization

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  data_loader.py  inference.py  model.py  predict.py  requirements.txt  strategy.py
python/examples/: 01_kv_cache_basics.py  02_inference_benchmark.py  03_strategy_comparison.py
rust/: Cargo.toml
rust/benches/: cache_benchmark.rs
rust/examples/: inference.rs  streaming.rs
rust/src/: lib.rs
rust/src/cache/: mod.rs  paged.rs  quantized.rs  standard.rs
rust/src/model/: attention.rs  mod.rs  transformer.rs
rust/src/strategy/: backtest.rs  mod.rs
